# crescendo

./: .gitignore  .gitmodules  README.md  batch_update_similarity.sh  even_more_updated.py  pipeline.py  pitch_tracker.py  radar_chart.html  realtime.py  requirements.txt  rerun_takes.sh  run_full_pipeline.sh  updated_pitch_tracker.py  v1.py  v10.py  v11.py  v12.py  v13.py  v2.py  v3.py  v4.py  v5.py  v6.py  v7.py  v8.py  v9.py  vocal_melody_viewer.html  vocal_notes_stats.csv  vocal_notes_to_csv.py  vocal_similarity_viewer.html  vocal_stats_viewer.html
crescendo/: app.py
crescendo_mobile/: MIDI_RENDERING_IMPLEMENTATION.md  README.md  pubspec.yaml  temp_onboarding_card  vmservice.json
crescendo_mobile/android/app/src/main/cpp/: CMakeLists.txt  duplex_engine.cpp  ring_buffer.h
crescendo_web_app/: README.md  app.py
dutils/: analysis_utils.py  pitch_utils.py  tone_analysis_utils.py  volume_analysis_utils.py
experimental/: chunky_server.py  server.py
inter_take_analysis/: build_takes_index.py  generate_take.py  record_and_process.py  record_scale_and_compare.py  takes_index.json  takes_melody_dashboard.html  takes_scores.html
python/: detect_vowel.py  requirements.txt  splash_font.py  vowel_calibrated.py  vowel_model.json
vocal_analyzer/: analysis_similarity.json  analysis_utils.py  analyze_vocal.py  c_major_scale.mid  generate_c_major_midi.py  generate_c_major_scale_wav.py  pitch_utils.py  reference_takes_dashboard.html  tone_analysis_utils.py  update_analysis_similarity.py  vocal_similarity_dashboard.html  volume_analysis_utils.py
vocal_coach/: README.md  (+4 more)
(+1101 files in other folders)
